updated header file

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,12 +2,12 @@
 
 <div id="header_logo">
 
-<a href="index.php"><img src="/images/logo.png" width="213" height="140" border="0" /></a>
+<a href="index.php"><img src="images/logo.png" width="213" height="140" border="0" /></a>
 
 <!-- CLOSE header_logo CONTAINER -->
 </div>
 
-<img src="/images/header_home_2.jpg" width="687" height="140" />
+<img src="images/header_home_2.jpg" width="687" height="140" />
 
 <div id="navbox">
 
