--- a/app/views/pages/_hp_calendar.html.erb
+++ b/app/views/pages/_hp_calendar.html.erb
@@ -9,7 +9,7 @@
         <th>Type</th>
     </tr>
 
-<% @events.each.published do |event| %>
+<% @events.each do |event| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
     <td><%= event.start.strftime("%b %d, %y") %></td>
     <td><%= link_to event.title, event %></td>
