added photo code

--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :gallery_category %><br />
-    <%= f.text_field :gallery_category %>
+    <%= f.label :gallery_category_id %><br />
+    <%= f.text_field :gallery_category_id %>
   </div>
   <div class="field">
     <%= f.label :gallery_name %><br />
