--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
     </li>
     <li><a href="photo_galleries.php">Photos &amp; Videos</a>
         <ul>
-        <li><%= link_to "Photo Galleries", pages_squadron_path %></li>
+        <li><%= link_to "Photo Galleries", galleries_path %></li>
         <li><a href="video_galleries.php">Video Gallery</a></li>
         </ul>
     </li>
