--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :gallery %><br />
-    <%= f.text_field :gallery %>
+    <%= f.label :gallery_id %><br />
+    <%= f.text_field :gallery_id %>
   </div>
   <div class="field">
-    <%= f.label :photographer %><br />
-    <%= f.text_field :photographer %>
+    <%= f.label :photographer_id %><br />
+    <%= f.text_field :photographer_id %>
   </div>
   <div class="field">
     <%= f.label :photo_title %><br />
