--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Gallery:</b>
-  <%= @photo.gallery %>
+  <%= @photo.gallery.gallery_name %>
 </p>
 
 <p>
   <b>Photographer:</b>
-  <%= @photo.photographer %>
+  <%= @photo.photographer.name %>
 </p>
 
 <p>
