--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing galleries</h1>
+<div class="content-left">
+
+<h1>Photo Galleries</h1>
 
 <table>
   <tr>
@@ -27,3 +29,5 @@
 <br />
 
 <%= link_to 'New Gallery', new_gallery_path %>
+
+</div>
