--- a/app/views/gallery_categories/index.html.erb
+++ b/app/views/gallery_categories/index.html.erb
@@ -1,3 +1,5 @@
+<div class="content-left">
+
 <h1>Listing gallery_categories</h1>
 
 <table>
@@ -23,3 +25,5 @@
 <br />
 
 <%= link_to 'New Gallery category', new_gallery_category_path %>
+
+</div>
