--- a/app/views/gallery_categories/new.html.erb
+++ b/app/views/gallery_categories/new.html.erb
@@ -1,5 +1,9 @@
+<div class="content-left">
+
 <h1>New gallery_category</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', gallery_categories_path %>
+
+</div>
