--- a/app/views/gallery_categories/show.html.erb
+++ b/app/views/gallery_categories/show.html.erb
@@ -1,3 +1,5 @@
+<div class="content-left">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -13,3 +15,5 @@
 
 <%= link_to 'Edit', edit_gallery_category_path(@gallery_category) %> |
 <%= link_to 'Back', gallery_categories_path %>
+
+</div>
