--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
     </li>
     <li><a href="px.php">Support</a>
         <ul>
-        <li><%= link_to "PX", pages_squadron_path %></li>
+        <li><%= link_to "PX", px_path %></li>
         <li><%= link_to "Squadron", pages_squadron_path %></li>
 <!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
 <!--        <li><a href="members.php">Members</a></li> -->
