--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,39 +2,33 @@
 
 <h1>Listing products</h1>
 
-<table width="500" class="table_border">
+<table width="560" class="table_border">
   <tr>
     <th>Item no</th>
     <th>Name</th>
+    <th>Photo</th>
     <th>Description</th>
-    <th>Size</th>
     <th>Value</th>
-    <th>Photo path</th>
-    <th>Available</th>
     <th>Ship handling</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Available</th>
   </tr>
 
 <% @products.each do |product| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>"> 
-    <td><%= product.item_no %></td>
+    <td><%= link_to product.item_no, edit_product_path(product) %></td>
     <td><%= product.name %></td>
+    <td> <% if product.photo_path? %>
+           <%= image_tag product.photo_path, :width => 64, :height => 43, :border => 0 %></td>
+         <% end %>
     <td><%= product.description %></td>
-    <td><%= product.size %></td>
-    <td><%= product.value %></td>
-    <td><%= product.photo_path %></td>
-    <td><%= product.available %></td>
-    <td><%= product.ship_handling %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td align="right"><%= number_to_currency(product.value) %></td>
+    <td align="right"><%= number_to_currency(product.ship_handling) %></td>
+    <td align="center"><%= product.available %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'Add New Product', new_product_path %>
 </div>
