cleanup navigation links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,20 +26,20 @@
         <li><%= link_to "VMB 612", pages_VMB612_path %></li>
         </ul>
     </li>
-    <li><a href="px.php">Support</a>
+    <li><%= link_to "Support", px_path %></a>
         <ul>
         <li><%= link_to "PX", px_path %></li>
         <li><%= link_to "Squadron", pages_squadron_path %></li>
 <!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
-<!--        <li><a href="members.php">Members</a></li> -->
         </ul>
     </li>
     <li><a href="photo_galleries.php">Photos &amp; Videos</a>
         <ul>
         <li><%= link_to "Photo Galleries", galleries_path %></li>
-        <li><a href="video_galleries.php">Video Gallery</a></li>
+        <li><%#= link_to "Video Gallery", videos_path %> <a href="#">Video Gallery</a></li>
         </ul>
     </li>
+<!--    <li><%= link_to "Members", galleries_path %></li> -->
 </ul>
 
 <!-- CLOSE NAV CONTAINER -->
