cleanup navigation links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
 <!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
         </ul>
     </li>
-    <li><%= link_to "Photos &amp; Videos", galleries_path %>
+    <li><%= link_to "Photos & Videos", galleries_path %>
         <ul>
         <li><%= link_to "Photo Galleries", galleries_path %></li>
         <li><%#= link_to "Video Gallery", videos_path %> <a href="#">Video Gallery</a></li>
