--- a/public/stylesheets/web_style.css
+++ b/public/stylesheets/web_style.css
@@ -48,6 +48,12 @@ body {
        z-index: 0;
        }
 
+.teaser_img {
+       float: right;
+       border: none;
+  margin: 5px;
+       }
+
 #navbox {
 	position: absolute;
 	width: 860px;
