--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,11 @@
+<div class="content-left">
+
 <h1>Editing event</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Back', events_path %> |
+<%= link_to 'Destroy', @event, :confirm => 'Are you sure?', :method => :delete %>
+
+</div>
