update to rails 3.1, added authentication, roles

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,9 +17,9 @@
 </table>
 
 <br />
-
+<% if session[:user_id] %>
 <%= link_to 'New Event', new_event_path %>
-
+<% end %>
 <!-- Close content-left -->
 </div>
 
