--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -8,9 +8,10 @@
 
   <%= simple_format(@news.content) %>
 
+<% if session[:user_id] %>
 <%= link_to 'Edit', edit_news_path(@news) %> |
 <%= link_to 'Back', news_index_path %>
-
+<% end %>
 <!-- Close content-left -->
 </div>
 
