--- a/app/views/pages/_hp_galleries.html.erb
+++ b/app/views/pages/_hp_galleries.html.erb
@@ -4,7 +4,7 @@
 
 <%= image_tag("photos/080605_maint_update/thumbs/maint_0806_1.jpg", :width =>"150", :height => "99", :class => "fl") %><p>We like taking pictures and videos of the Devil Dog - it's such a fine looking airplane. </p>
 
-<div align="right"><p><a href="photo_galleries.php">Visit our gallaries to view...</a></p></div>
+<div align="right"><p><%= link_to "Visit our gallaries to view...", galleries_path %></p></div>
 
 
 </div>
