added missing teaser photo

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -8,11 +8,17 @@
     <th>Title</th>
   </tr>
 
-<% @events.each do |event| %>
+<% @event_types.each do |event_type| %>
+  <tr>
+    <td colspan="2"><strong><em><%= event_type.title %></em></strong></td>
+  </tr>
+<% event_type.events.published.ordered.each do |event| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
     <td><%= event.start.strftime("%b %d, %Y") %></td>
     <td><%= link_to event.title, event %></td>
   </tr>
+<% end %>
+
 <% end %>
 </table>
 
