--- a/public/stylesheets/web_style.css
+++ b/public/stylesheets/web_style.css
@@ -343,6 +343,15 @@ div.clearer {
 	border-style: none none solid none; 
 	}
 
+.table_border td { 
+	border-bottom: #d6d68b;
+	border-right:  #d6d68b;
+	border-width: 0 1px 1px 0; 
+	border-style: none solid solid none;
+	padding: 3px;
+	vertical-align: top; 
+	}
+
 .white_row { 
     background: #fff; 
 	border-bottom: #d6d68b;
