--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.collection_select :event_type_id, EventType.all, :id, :title, :order => 'title ASC', :prompt => true %>
   </div>
   <div class="field">
+    <%= f.label :latitude, "Latitude" %><br />
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
     <%= f.label :title, "Event Name" %><br />
     <%= f.text_field :title %>
   </div>
@@ -43,6 +47,10 @@
   <div class="field">
     <%= f.label :location %><br />
     <%= f.text_field :location %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude, "Longitude" %><br />
+    <%= f.text_field :longitude %>
   </div>
   <div class="field">
     <%= f.label :contact_info %><br />
