--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,7 @@
 <div class="content-left">
-
+<% if notice %>
+<p id="notice"><%= notice %></p>
+<% end %>
 <h1>Listing products</h1>
 
 <table width="560" class="table_border">
