--- a/app/views/teasers/edit.html.erb
+++ b/app/views/teasers/edit.html.erb
@@ -4,6 +4,8 @@
 
 <%= render 'form' %>
 
+<p><%= session[:user_id] %></p>
+
 <%= link_to 'Show', @teaser %> |
 <%= link_to 'Back', teasers_path %>
 
