--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
 <div id="main-area">
 
 <div id="content">
-
+<% if session[:current_user] %>
+<%= link_to 'Logout', logout_path, :method => :delete	%>
+<% end %>
 <%= yield %>
 
 </div>
