--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
     <li><%= link_to "Photos & Videos", galleries_path %>
         <ul>
         <li><%= link_to "Photo Galleries", galleries_path %></li>
-        <li><%#= link_to "Video Gallery", videos_path %> <a href="#">Video Gallery</a></li>
+        <li><%= link_to "Video Gallery", video_gallery_path %></li>
         </ul>
     </li>
 <!--    <li><%= link_to "Members", galleries_path %></li> -->
