--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
         <li><%= link_to "Video Gallery", video_gallery_path %></li>
         </ul>
     </li>
-<!--    <li><%= link_to "Members", galleries_path %></li> -->
+    <li><%= link_to "Members", pages_member_home_path %></li>
 </ul>
 
 <!-- CLOSE NAV CONTAINER -->
