--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <div id="content-hp">
 
+<% if notice %>
+<p id="notice"><%= notice %></p>
+<% end %>
+
 <div class="row-container">
 
 <%= render 'hp_about' %>
