added updates to view pictures

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,7 +1,38 @@
 <div class="content-left">
 
-<h1>Galleries</h1>
+<h1>Photo Galleries</h1>
 
-<p>The video and photo galleries are undergoing maintenenace - check back soon.</p>
+<table>
 
+
+<% @galleries.each do |gallery| %>
+  <tr>
+    <td><%= image_tag 'photos/'+ gallery.gallery_pic %></td>
+    <td><%= link_to gallery.gallery_name, gallery %></td>
+    <td><%= gallery.description %></td>
+    <td><% if session[:current_user] %><%= link_to 'Edit', edit_gallery_path(gallery) %><% end %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<% if session[:current_user] %>
+<%= link_to 'New Gallery', new_gallery_path %>
+<% end %>
+
+</div>
+
+<div id="right-column">
+
+<div class="right-column-box">
+
+<h1>Web Maintenance</h1>
+
+<p>Our photo gallery is getting an upgrade. We appreciate your patience as we add new features.</p>
+
+<!-- Close right-column-box -->
+</div>
+
+<!-- Close right-column -->
 </div>
