--- a/app/views/members/account.html.erb
+++ b/app/views/members/account.html.erb
@@ -2,78 +2,72 @@
 
 <p id="notice"><%= notice %></p>
 
+<div class="form_row">
+
+<div class="form_cell" style="width: 200px;">
+
+<p><b><%= @member.first_name %> <%= @member.last_name %></b></p>
+
+<p><%= @member.street_1 %>
+ <% if @member.street_2? %>
+   <br /><%= @member.street_2 %>
+ <% end %>
+<br /><%= @member.city %>, <%= @member.state %> <%= @member.zip %>
+</p>
+</div>
+<div class="form_cell">
 <p>
-  <b>Username:</b>
+  <% if @member.home_phone? %>
+    <em>Home:</em> <%= @member.home_phone %><br />
+  <% end %>
+  <% if @member.work_phone? %>
+    <em>Work:</em> <%= @member.work_phone %><br />
+  <% end %>
+  <% if @member.cell_phone? %>
+    <em>Cell:</em> <%= @member.cell_phone %><br />
+  <% end %>
+  <% if @member.email? %>
+    <em>Email:</em> <%= @member.email %>
+  <% end %>
+</p>
+
+<p>
+  <em>Username:</em>
   <%= @member.user.username %>
-</p>
-
-<p>
-  <b>Caf Col No:</b>
+<br />
+  <em>CAF Col No:</em>
   <%= @member.caf_col_no %>
-</p>
-
-<p>
-  <b>Dd dues date:</b>
+<br />
+  <em>DDS dues date:</em>
   <%= @member.dd_dues_date %>
 </p>
+</div>
+</div>
 
-<p>
-  <b>First name:</b>
-  <%= @member.first_name %>
-</p>
+<%= link_to 'Edit', account_edit_path(@member) %> |
+<%= link_to 'Back', pages_member_home_path %>
 
-<p>
-  <b>Last name:</b>
-  <%= @member.last_name %>
-</p>
+</div>
 
-<p>
-  <b>Street 1:</b>
-  <%= @member.street_1 %>
-</p>
+<div id="right-column">
 
-<p>
-  <b>Street 2:</b>
-  <%= @member.street_2 %>
-</p>
+<div class="right-column-box">
 
-<p>
-  <b>City:</b>
-  <%= @member.city %>
-</p>
+<h1>Members Pages</h1>
 
-<p>
-  <b>State:</b>
-  <%= @member.state %>
-</p>
+<p>Active</p>
+<ul>
+  <li><%= link_to "Membership", members_list_path %></li>
+  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
+</ul>
+<p>Coming Soon</p>
+<ul>
+  <li>Forum</li>
+  <li>Event Sign-up</li>
+  <li>Documents</li>
+</ul>
+<!-- Close right-column-box -->
+</div>
 
-<p>
-  <b>Zip:</b>
-  <%= @member.zip %>
-</p>
-
-<p>
-  <b>Home phone:</b>
-  <%= @member.home_phone %>
-</p>
-
-<p>
-  <b>Work phone:</b>
-  <%= @member.work_phone %>
-</p>
-
-<p>
-  <b>Cell phone:</b>
-  <%= @member.cell_phone %>
-</p>
-
-<p>
-  <b>Email:</b>
-  <%= @member.email %>
-</p>
-
-
-<%= link_to 'Edit', edit_member_path(@member) %> |
-<%= link_to 'Back', members_path %>
-
+<!-- Close right-column -->
 </div>
