--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -18,14 +18,17 @@
 
 <h1>Members Pages</h1>
 
+<p>Active</p>
+<ul>
+  <li><%= link_to "Membership", members_list_path %></li>
+  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
+</ul>
+<p>Coming Soon</p>
 <ul>
   <li>Forum</li>
   <li>Event Sign-up</li>
   <li>Documents</li>
-  <li><%= link_to "Membership", members_list_path %></li>
-  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
 </ul>
-
 <!-- Close right-column-box -->
 </div>
 
