--- a/app/views/members/members_list.html.erb
+++ b/app/views/members/members_list.html.erb
@@ -1,4 +1,6 @@
-<div class="content-left">
+<% content_for :sidebar do %>
+  <%= render "sidebars/members" %>
+<% end %>
 
 <h1>Members List</h1>
 
@@ -17,30 +19,3 @@
   </tr>
 <% end %>
 </table>
-
-<br />
-
-</div>
-
-<div id="right-column">
-
-<div class="right-column-box">
-
-<h1>Members Pages</h1>
-
-<p>Active</p>
-<ul>
-  <li><%= link_to "Membership", members_list_path %></li>
-  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
-</ul>
-<p>Coming Soon</p>
-<ul>
-  <li>Forum</li>
-  <li>Event Sign-up</li>
-  <li>Documents</li>
-</ul>
-<!-- Close right-column-box -->
-</div>
-
-<!-- Close right-column -->
-</div>
