--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,5 +1,3 @@
-<div class="content-left">
-
 <h1>Devil Dog News:</h1>
  
 <table width="500" class="table_border">
@@ -17,49 +15,6 @@
 <% end %>
 </table>
 
-<!-- Close content-left -->
-</div>
-
-
-<div id="right-column">
-
-<div class="right-column-box">
-
-<h1>Squadron Alerts</h1>
-
-
-
-<p>Sign up for Alerts to Devil Dog news, newsletters and calendar updates. Simply enter your email address and click on subscribe.</p>
-
-<p>If you wish to cancel your news alerts, enter your email address and click unsubscribe.</p>
-
-
-<form name="mail_list" method="post" action="admin/mail_list_add.php">            
-<table align="center" class="table_nobrdr">
-    <tr> 
-        <td><div align="right">email:</div></td>
-        <td><input name="address" type="text" id="address" maxlength="50" /></td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td><div align="center"><input type="submit" name="Submit" value="Subscribe" /></div></td>
-    </tr>
-    <tr> 
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-    </tr>
-    <tr> 
-          <td>&nbsp;</td>
-          <td><div align="center"><input type="submit" name="Submit" value="Unsubscribe" /></div></td>
-    </tr>
-</table>
-</form>
-
-<!-- Close right-column-box -->
-</div>
-
-<!-- Close right-column -->
-</div>
-
-<!-- Close content -->
-</div>
+<% content_for :sidebar do %>
+  <%= render "sidebars/newsletter_signup" %>
+<% end %>
