--- a/app/views/pages/VMB612.html.erb
+++ b/app/views/pages/VMB612.html.erb
@@ -1,4 +1,6 @@
-<div class="content-left">
+<% content_for :sidebar do %>
+  <%= render "sidebars/newsletter_signup" %>
+<% end %>
 
 <h1>Devil Dog History</h1>
 
@@ -31,49 +33,3 @@
 <p align="left">From Saipan, VMB-612 moved to Iwo Jima in April 1945, where it could reach the coast of Japan during its nigh-time anti-shipping strikes. Cram's squadron claimed 7 ships sunk and 80 damaged during missions from Saipan and Iwo, with a loss of three PBJs in combat. On July 28, 1945, VMB-612 departed for its next base on Okinawa. 
 
 <p align="right" class="caption_text">VMB History from DISPATCH Volume 22, Number 2, Summer, 1997
-
-
-<!-- Close content-left -->
-</div>
-
-
-<div id="right-column">
-
-<div class="right-column-box">
-
-<h1>Squadron Alerts</h1>
-
-<p>Sign up for Alerts to Devil Dog news, newsletters and calendar updates. Simply enter your email address and click on subscribe.</p>
-
-<p>If you wish to cancel your news alerts, enter your email address and click unsubscribe.</p>
-
-
-<form name="mail_list" method="post" action="admin/mail_list_add.php">            
-<table align="center" class="table_nobrdr">
-    <tr> 
-        <td><div align="right">email:</div></td>
-        <td><input name="address" type="text" id="address" maxlength="50" /></td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td><div align="center"><input type="submit" name="Submit" value="Subscribe" /></div></td>
-    </tr>
-    <tr> 
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-    </tr>
-    <tr> 
-          <td>&nbsp;</td>
-          <td><div align="center"><input type="submit" name="Submit" value="Unsubscribe" /></div></td>
-    </tr>
-</table>
-</form>
-
-<!-- Close right-column-box -->
-</div>
-
-<!-- Close right-column -->
-</div>
-
-<!-- Close content -->
-</div>
