--- a/app/views/pages/member_home.html.erb
+++ b/app/views/pages/member_home.html.erb
@@ -1,4 +1,6 @@
-<div class="content-left">
+<% content_for :sidebar do %>
+  <%= render "sidebars/members" %>
+<% end %>
 
 <% if notice %>
 <p id="notice"><%= notice %></p>
@@ -7,33 +9,3 @@
 <h1>Members Section</h1>
 
 <p>Members only section provides access to information...</p>
-
-<!-- Close content-left -->
-</div>
-
-
-<div id="right-column">
-
-<div class="right-column-box">
-
-<h1>Members Pages</h1>
-
-<p>Active</p>
-<ul>
-  <li><%= link_to "Membership", members_list_path %></li>
-  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
-</ul>
-<p>Coming Soon</p>
-<ul>
-  <li>Forum</li>
-  <li>Event Sign-up</li>
-  <li>Documents</li>
-</ul>
-<!-- Close right-column-box -->
-</div>
-
-<!-- Close right-column -->
-</div>
-
-<!-- Close content -->
-</div>
