--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -26,7 +26,7 @@
 
 <p><a href="http://www.pilotschoice.com/">Pilots Choice Aviation</a><br />
 209 Corsair Drive<br />
-Georgetown, TX </p>
+Georgetown, TX 78628</p>
 
 </blockquote>
            
